# elephant-broker

./: .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml
dashboard/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
dashboard/src/: App.tsx  accessControlProvider.ts  main.tsx  supertokens.ts  theme.ts
deploy/: install.sh  rerank_server.py  reranker.env  update.sh  vllm-multi-model.sh
deploy/systemd/: elephantbroker-chat-graph-drain.service  elephantbroker-chat-graph-drain.timer  elephantbroker-hitl.service  elephantbroker.service
docs/: CONFIGURATION.md  DEPLOYMENT.md  OPENCLAW-SETUP.md
elephantbroker/: __init__.py  cli.py  cli_auth.py  ontology.py  server.py
elephantbroker/api/: app.py
elephantbroker/config/: default.yaml  env.example
elephantbroker/ontology/: __init__.py  provenance.py  registry.py
elephantbroker/runtime/: chat_graph_gate.py  chat_graph_queue.py  container.py  document_graph_gate.py  graph_utils.py  observability.py  redis_keys.py  trade_graph.py  trade_relations.py
elephantbroker/schemas/: actor.py  config.py  context.py  dashboard.py  evidence.py  fact.py  procedure.py  trace.py
hitl-middleware/: hitl.env.example
hitl-middleware/hitl_middleware/: config.py  models.py  router.py
infrastructure/: .env.local.example  docker-compose.local.yml  docker-compose.test.yml  docker-compose.yml
local/: DASHBOARD-SCOPE-OF-WORK.html  DEPLOYMENT-FIXES.md  FIX-GATEWAY-IDENTITY-PLAN.md  FIX-PLAN-Dashboard-Admin-Email-Linking.md  FIX-PLAN-Ingest-Architecture.md  FIX-PLAN-Phase-2.md  FIX-PLAN-Phase-3.md  FIX-PLAN-Pre-Prompt-Ingest-Pipeline.md  IMPLEMENTATION-PLAN-NAT-OPENSHELL-INTEGRATION.md  IMPLEMENTATION-PLAN-Phase-0.md  IMPLEMENTATION-PLAN-Phase-1.md  IMPLEMENTATION-PLAN-Phase-10.md  IMPLEMENTATION-PLAN-Phase-11.md  IMPLEMENTATION-PLAN-Phase-12.md  IMPLEMENTATION-PLAN-Phase-2.md  IMPLEMENTATION-PLAN-Phase-3.md  IMPLEMENTATION-PLAN-Phase-3b-postfix.md  IMPLEMENTATION-PLAN-Phase-4.md  IMPLEMENTATION-PLAN-Phase-5.md  IMPLEMENTATION-PLAN-Phase-6.md  IMPLEMENTATION-PLAN-Phase-7.md  IMPLEMENTATION-PLAN-Phase-8.md  IMPLEMENTATION-PLAN-Phase-9.md  IMPLEMENTATION-PLAN.md  IMPLEMENTED-Batch8-draft.md  IMPLEMENTED-FIX-Gateway-Identity.md  IMPLEMENTED-FIX-Phase-2.md  IMPLEMENTED-FIX-Phase-3.md  IMPLEMENTED-FIX-Phase-3b.md  IMPLEMENTED-OLD-PR-10-merge.md  IMPLEMENTED-OLD-PR-11-merge.md  IMPLEMENTED-OLD-PR-12-merge.md  IMPLEMENTED-OLD-PR-3-merge.md  IMPLEMENTED-OLD-PR-4-merge.md  IMPLEMENTED-OLD-PR-6-merge.md  IMPLEMENTED-OLD-PR-7-merge.md  IMPLEMENTED-OLD-PR-8-merge.md  IMPLEMENTED-OLD-PR-9-merge.md  IMPLEMENTED-PR-10-merge.md  IMPLEMENTED-PR-3-merge.md  (+24 more)
plugins/: CONTRACT.md  DEPLOYMENT-MATRIX.md  README.md
scripts/: backfill_trade_graph.py  chat_graph_worker.py  document_graph_worker.py  drain_chat_graph_queue.py  kg_edge_smoke.py  kg_trade_query_smoke.py  kg_trade_smoke.py  normalize_trade_graph.py  run-integration-tests.sh  verify-plugin-dist.sh
(+413 files in other folders)
