[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elephantbroker"
version = "0.1.0"
description = "Unified Cognitive Runtime for the OpenClaw platform (OMNIA Protocol)"
requires-python = ">=3.11,<3.13"
license = "AGPL-3.0-only"

# Direct dependencies are pinned to exact versions for reproducible builds.
# uv.lock pins all transitive dependencies on top of these.
# To upgrade a dependency, see deploy/UPDATING-DEPS.md.
dependencies = [
    "pydantic==2.12.5",
    "cognee[neo4j]==1.2.2",
    "httpx==0.28.1",
    "qdrant-client==1.17.1",
    "redis==7.4.0",
    "fastapi==0.135.3",
    "uvicorn[standard]==0.44.0",
    "opentelemetry-api==1.40.0",
    "opentelemetry-sdk==1.40.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.40.0",
    "opentelemetry-instrumentation-fastapi==0.61b0",
    "click==8.3.2",
    "prometheus_client==0.24.1",
    "pyyaml==6.0.3",
    "clickhouse-connect==0.15.1",
    "asyncpg==0.31.0",
]

[project.scripts]
elephantbroker = "elephantbroker.server:main"
ebrun = "elephantbroker.cli:main"

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "ruff==0.15.9",
    "tiktoken==0.12.0",
    "websockets==15.0.1",
    "PyNaCl==1.6.2",
]
scenario = [
    "websockets==15.0.1",
    "PyNaCl==1.6.2",
]

[tool.uv]
# Explicit declaration that this project is uv-managed (default for projects
# with a uv.lock, but stating it makes the workspace mode unambiguous).
managed = true

[tool.uv.workspace]
# hitl-middleware is a sibling package in the same monorepo. Declaring it
# as a workspace member makes the root uv.lock authoritative for BOTH
# packages — `uv sync --frozen` covers them in one atomic operation.
# Before this change, install.sh / update.sh ran a separate `uv pip install`
# against hitl-middleware/, which bypassed the lockfile entirely and let
# the HITL service drift from the runtime on every install.
members = ["hitl-middleware"]

[tool.setuptools.packages.find]
include = ["elephantbroker*"]

# Ship default.yaml inside the wheel so `ElephantBrokerConfig.load()` can read
# it as a packaged resource via `importlib.resources.files("elephantbroker.config")`.
# Without this, a wheel install (or any non-source-tree install) would fail to
# locate default.yaml at runtime — F2/F3: from_env() removal made the YAML
# the single source of truth, so the file MUST be packaged.
[tool.setuptools.package-data]
elephantbroker = ["config/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
markers = [
    "integration: integration tests requiring live infrastructure (Neo4j, Qdrant, Redis)",
    "pipeline: pipeline integration tests requiring real LLM (slow)",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
